--- a/ouderavond project/opmaak.css
+++ b/ouderavond project/opmaak.css
@@ -27,7 +27,7 @@ p{
     background-color: #01C9BD;
     width: 70vw;
     text-align: left;
-    border-radius: 0.3cm;
+    borrer-radius: 0.3cm;
     height: 50vh;
 }
 
