--- a/ouderavond project/overons.css
+++ b/ouderavond project/overons.css
@@ -1,6 +1,3 @@
-
-
-
 body{
     background-color: #40FFFF;
 
@@ -26,25 +23,13 @@ p{
     font-size: 30px;
     outline-style: solid;;
     background-color: #01C9BD;
-    width: 30vw;
+    width: 70vw;
     text-align: left;
     border-radius: 0.3cm;
     height: 50vh;
 }
 
 
-.canvascenter {
+.center {
     margin: auto;
 width: 70%;}
-
-.canvascontainer {
-    display: flexbox;
-
-}
-
-.canvastekstblok {
-    flex: 1; 
-    padding: 20px;
- 
-}
-
