--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -19,10 +19,16 @@ justify-content: flex-end;
 font-family: Arial, sans-serif;
 
 }
-.center{
+
+h4{
+  text-align: center;
+}
+
+
+#center{
     margin: auto;
-    width: 25%;
-    padding: 10px;
+    width: 100%;
+    padding: 1px;
 }
 nav {
   display: flex;
@@ -34,7 +40,7 @@ nav {
   margin: auto;
   background-color: #01C9BD;
   justify-content: space-between;
-  position: fixed;
+  width: 100%;
 
 }
 .sticky {
@@ -106,7 +112,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
-  margin: 0;
+  margin: 0;  
 }
 
 /* Add a blue background color to navigation links on hover */
