--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -162,3 +162,42 @@ nav a{
   text-decoration: none;
 }
 
+.canvascenter {
+  margin: auto;
+width: 70%;
+}
+
+
+.canvascontainer {
+  display: flexbox;
+
+}
+
+.canvastekstblok {
+  flex: 1; 
+  padding: 20px;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  outline-style: solid;;
+  background-color: #01C9BD;
+  width: 30vw;
+  text-align: left;
+  border-radius: 0.3cm;
+  height: 50vh;   
+}
+
+
+
+.achtergrondinfop{
+  padding: 15px;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  outline-style: solid;;
+  background-color: #01C9BD;
+  width: 70vw;
+  text-align: left;
+  border-radius: 0.3cm;
+  height: 70vh;
+}
