--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -162,42 +162,56 @@ nav a{
   text-decoration: none;
 }
 
-.canvascenter {
-  margin: auto;
-width: 70%;
+
+.canvasbody {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  height: 50vh;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.canvascontainer {
-  display: flexbox;
-
+.canvascenter{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-top: 300px;
 }
 
-.canvastekstblok {
-  flex: 1; 
-  padding: 20px;
-  margin: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  outline-style: solid;;
+.canvascolumn {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 30px;
+  width: 90vw;
+  height: 70vh;
+}
+
+.canvastext-box {
   background-color: #01C9BD;
-  width: 30vw;
-  text-align: left;
-  border-radius: 0.3cm;
-  height: 50vh;   
+  padding: 20px;
+  border-radius: 10px;
+  color: white;
 }
 
 
 
-.achtergrondinfop{
+.agip{
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 15px;
   margin: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
   outline-style: solid;;
   background-color: #01C9BD;
   width: 70vw;
   text-align: left;
   border-radius: 0.3cm;
   height: 70vh;
+}
+
+.agicenter{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+
 }
