--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -50,10 +50,11 @@ nav a{
 }
 a{
 font-size: 23px;
+font-family: Arial, Helvetica, sans-serif;
 }
 p{
 font-size: 30px;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family: Arial, Helvetica, sans-serif;
 }
 .navbar {
   overflow: hidden;
@@ -160,11 +161,21 @@ margin-right: auto;
   color: white;
 }
 
-
+.aginav {
+  width: 100%;
+  padding: 1rem;
+  min-height: 10vh;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: auto;
+  background-color: #40ffff;
+  justify-content: center;
+width: 100vw;
+}
 
 .agip{
   font-size: 30px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   padding: 15px;
   margin: auto;
   outline-style: solid;
@@ -174,6 +185,8 @@ margin-right: auto;
   border-radius: 0.3cm;
   height: 70vh;
 }
+
+
 footer {
     background-color: #01C9BD;
     color: white;
@@ -189,5 +202,4 @@ footer {
   width: 600px;
   text-align: center;
   justify-content: center;
-
 }
