--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -2,6 +2,7 @@ body{
 background-color: #40ffff;
 max-width: 100%;
 margin: auto;
+overflow-x: hidden;
 }
 h1{
 font-size: 40px;
@@ -188,13 +189,13 @@ width: 100vw;
 
 
 footer {
-    background-color: #01C9BD;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #01C9BD;
+  color: #fff;
+  text-align: center;
+  padding: 10px;z
 }
 
 .agicenter{
@@ -202,4 +203,10 @@ footer {
   width: 600px;
   text-align: center;
   justify-content: center;
+}
+.center-video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
