--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -196,7 +196,7 @@ footer {
   background-color: #01C9BD;
   color: #fff;
   text-align: center;
-  padding: 10px;z
+  padding: 10px;
 }
 
 .agicenter{
