--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -295,3 +295,16 @@ table, th, td {
   border-radius: 0.3cm;
   height: 40vh;
 }
+
+.Examenplan{
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 15px;
+  margin: auto;
+  outline-style: solid;
+  background-color: #01C9BD;
+  width: 70vw;
+  text-align: left;
+  border-radius: 0.3cm;
+  height: 40vh;
+}
