--- a/ouderavond project/OpmaakO.css
+++ b/ouderavond project/OpmaakO.css
@@ -318,8 +318,17 @@ table, th, td {
 width: 70vw;
 height: 60vh;
 align-items: center;
-
-
-
-
+}
+.BSA-column{
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 15px;
+  margin: auto;
+  outline-style: solid;
+  background-color: #01C9BD;
+  width: 70vw;
+  text-align: left;
+  border-radius: 0.3cm;
+  height: 105vh;
+  align-items: center;
 }
